# Language-Learning-Rust

./: .gitignore  Cargo.toml
migrations/: 20240301222045_create_premium_tier_enum.sql  20240430151214_create_users_table.sql  20240430151317_create_languages_table.sql  20240430151341_create_scripts_table.sql  20240430151357_create_translations_table.sql  20240430212455_create_user_questions_table.sql  20240503191931_create_user_languages_table.sql  20240505195706_create_user_script_table.sql
src/: errors.rs  lib.rs  main.rs
src/api/: mod.rs  route_functions.rs
