[package]
name = "Language-Learning-Backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
axum-macros = "0.4.1"
bcrypt = "0.15.1"
dotenv = "0.15.0"
http = "1.1.0"
hyper = "1.3.1"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
reqwest = {version = "0.12.4", features = ["json"] }
serde = "1.0.199"
serde_json = "1.0.116"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
